emg_layout/src/snapshots/emg_layout__impl_refresh__refresh_test__anima_refresh_edge_33.snap
---
source: emg_layout/src/impl_refresh.rs
expression: "&a"
---
AnimationEdge {
    inside: AnimationInside {
        steps: StateVar(
            RefCell {
                value: [
                    _Step,
                    To(
                        [
                            Prop(
                                TypeName(
                                    "CssWidth",
                                ),
                                Motion {
                                    position: NotNan(
                                        1.0,
                                    ),
                                    velocity: NotNan(
                                        0.0,
                                    ),
                                    target: NotNan(
                                        1.0,
                                    ),
                                    interpolation: Spring {
                                        stiffness: NotNan(
                                            170.0,
                                        ),
                                        damping: NotNan(
                                            26.0,
                                        ),
                                    },
                                    unit: Px,
                                    interpolation_override: None,
                                },
                            ),
                        ],
                    ),
                ],
            },
        ),
        interruption: StateVar(
            [],
        ),
        props: [
            StateVarProperty(
                StateVar(
                    Prop(
                        TypeName(
                            "CssWidth",
                        ),
                        Motion {
                            position: NotNan(
                                87.03045,
                            ),
                            velocity: NotNan(
                                -429.1131,
                            ),
                            target: NotNan(
                                0.0,
                            ),
                            interpolation: Spring {
                                stiffness: NotNan(
                                    170.0,
                                ),
                                damping: NotNan(
                                    26.0,
                                ),
                            },
                            unit: Px,
                            interpolation_override: None,
                        },
                    ),
                ),
            ),
        ],
    },
    timing: StateAnchor(
        Timing {
            current: 33ms,
            dt: 17ms,
        },
    ),
    running: StateAnchor(
        true,
    ),
}
